@@ -3,6 +3,9 @@
 2.1b1 (2023-07-11)
 
 Added:
+- The request command of the subscriptions CLI has a new --clip-to-source
+  option (#xxx).
+- A new request-pv command has been added to the subscriptions CLi (#xxx).
 - Support for catalog source publishing stages (#977) and time range types
   (#978) have been added to subscription_request.catalog_source.
 - Add the option to get Planetary Variable subscription results as a CSV file
